# GenDLStudy

./: .env  .gitignore  .gitmodules
.devcontainer/: devcontainer.json
notebooks/: cdf.ipynb
raw_networks/: Cargo.toml  README.md
scripts/: .gitignore  dcgan.py  gradient.py  model_ana.py  process_data.py  pyproject.toml  sum_of_guassion.py
scripts/RL/: car.py
scripts/conv/: conv_convtranpose.py
scripts/gendlstudy/: .gitignore  dcgan.py  mlp.py  utils.py  vae_face_train.py  vae_fashion.py  vae_sampler.py
scripts/gendlstudy/arm/lstm/: lstm.py  manual_lstm.py
scripts/gendlstudy/arm/pixelcnn/: pixelcnn++.py  pixelcnn.py
scripts/gendlstudy/arm/stacked_lstm/: slstm.py
scripts/gendlstudy/cgan/: cgan.py
scripts/gendlstudy/ddm/: ddm.py  embedding_and_scheduling.ipynb
scripts/gendlstudy/energy_based/: ebm.py
scripts/gendlstudy/gan/: wgan_gp.py
scripts/gendlstudy/gpt/: ana.py  gpt.py  model.py
scripts/gendlstudy/muse_transformer/: transformer.py
scripts/gendlstudy/muse_transformer/data/: download.sh
scripts/gendlstudy/normflow/: realnvp.py
scripts/npu/: .gitignore  README.md  intel_npu_test.py  requirements.txt
