[tool.poetry]
name = "gendlstudy"
version = "0.1.0"
description = "Source codes of Generative Deep Learning"
authors = ["Leo <leetschau@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    { include = "gendlstudy" }
]

[[tool.poetry.source]]
name = "pypi_mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
tensorflow[and-cuda] = "^2.16.1"
tensorflow_probability = "0.23.0"
keras = "^3.3.3"
keras-cv = "0.9.0"
matplotlib = "3.9.0"
PyQt5 = "5.15.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
